--- a/frontend/src/css/MisReservas.css
+++ b/frontend/src/css/MisReservas.css
@@ -25,7 +25,7 @@
 
 .reservas-list li input[type="checkbox"] {
     margin-top: -5px; /* Espaciado entre el checkbox y el contenido */
-    margin-left: 0; /* Elimina cualquier margen izquierdo */
+    margin-left: 0px; /* Elimina cualquier margen izquierdo */
     order: -1; /* Mueve el checkbox al principio del contenedor */
 }
 
@@ -51,7 +51,7 @@
     align-items: center;
     gap: 8px;
     margin-bottom: -30px;
-    margin-left: 5px;
+    margin-left: 8px;
 }
 
 .checkbox-global {
@@ -386,6 +386,14 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-bottom: 0px;
+    margin-right: -40px;
+}
+
+.boton-cancelar-seleccionadas:hover {
+    
+    background-color: #c82333;
+    color: white;
+    
 }
 
 /* Estilos del modal de confirmación */
