--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -486,13 +486,15 @@ h3{
     align-items: center; /* Asegura que los radios y los textos estén alineados verticalmente */
     width: 94.5%; /* Asegura que ocupe todo el ancho disponible */
     font-size: 15px;
-    border: none; /* Elimina cualquier borde */
+    border: none !important;  
 }
 
 .alergias-input-field label {
     display: flex;
     align-items: center; /* Alinear verticalmente los radios y el texto */
     gap: 5px; /* Espacio entre el radio y el texto */
+    border: none; /* Elimina cualquier borde */
+    outline: none;
 }
 
 .alergias-textarea {
